--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ Django==3.2.7
 django-cors-headers==3.9.0
 django-filter==21.1
 djangorestframework==3.12.4
+gunicorn==20.1.0
+psycopg2-binary==2.9.1
 pytz==2021.3
 sqlparse==0.4.2
