--- a/.github/workflows/ci-cd-master.yml
+++ b/.github/workflows/ci-cd-master.yml
@@ -31,10 +31,17 @@ jobs:
         run: |
           pip install flake8 pytest
           flake8
+      - name: Run Postgre SQL container
+        run: |
+          docker-compose -f database.yml up -d
+      - name: Make migrations
+        run: |
+          python ./backend/manage.py makemigrations
+          python ./backend/manage.py migrate
       - name: Coverage report
         run: |
           pip install coverage
-          coverage run ./backend/manage.py test
+          coverage run ./backend/manage.py test risk_factors
           coverage report
       - name: Upload Coverage Report to Codecov
         uses: codecov/codecov-action@v1
@@ -42,7 +49,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Run tests
         run: |
-          python ./backend/manage.py test
+          python ./backend/manage.py test risk_factors
 
   continuous-deployment:
     runs-on: ubuntu-latest
@@ -61,6 +68,7 @@ jobs:
           envkey_POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
           envkey_POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           envkey_POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          envkey_POSTGRES_HOST: database
           envkey_ADMIN_USERNAME: ${{ secrets.ADMIN_USERNAME }}
           envkey_ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
           envkey_ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
