--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ django-cors-headers==3.9.0
 django-filter==21.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
+numpy==1.21.2
+pandas==1.3.3
 psycopg2-binary==2.9.1
+python-dateutil==2.8.2
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
