--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
 asgiref==3.4.1
+certifi==2021.5.30
+charset-normalizer==2.0.6
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.2.7
 django-cors-headers==3.9.0
 django-filter==21.1
+django-rest-swagger==2.2.0
 djangorestframework==3.12.4
+Faker==9.0.0
 gunicorn==20.1.0
+idna==3.2
+itypes==1.2.0
+Jinja2==3.0.2
+MarkupSafe==2.0.1
 numpy==1.21.2
+openapi-codec==1.3.2
 pandas==1.3.3
 psycopg2-binary==2.9.1
 python-dateutil==2.8.2
 pytz==2021.3
+PyYAML==5.4.1
+requests==2.26.0
+simplejson==3.17.5
 six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
+uritemplate==3.0.1
+urllib3==1.26.7
