--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ gunicorn==20.1.0
 idna==3.2
 itypes==1.2.0
 Jinja2==3.0.2
+joblib==1.1.0
 MarkupSafe==2.0.1
 numpy==1.21.2
 openapi-codec==1.3.2
@@ -22,9 +23,12 @@ python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==5.4.1
 requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
 simplejson==3.17.5
 six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
+threadpoolctl==3.0.0
 uritemplate==3.0.1
 urllib3==1.26.7
