--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,8 @@
 upstream django {
-	server django_gunicorn:8000;
+        least_conn;
+	server backend_django_gunicorn_1:8000;
+	server backend_django_gunicorn_2:8000;
+	server backend_django_gunicorn_3:8000;
 }
 
 server {
@@ -12,5 +15,23 @@ server {
 	location /static/ {
 		alias /static/;
 	}
+	return 301 https://$host$request_uri;
 }
+server {
+        listen 443 ssl;
+
+	ssl_certificate		/etc/nginx/ssl/doctorinna-api.com.crt;
+	ssl_certificate_key	/etc/nginx/ssl/doctorinna-api.com.key;
+	ssl_protocols		TLSv1 TLSv1.1 TLSv1.2;
+	ssl_ciphers		HIGH:!aNULL:!MD5;
+
+        location / {
+                proxy_pass http://django;
+        }
+
+        location /static/ {
+                alias /static/;
+        }
+}
+
 
