--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 upstream django {
     least_conn;
-	server app1:8000;
-	server app2:8000;
+	server 10.0.12.10:8000;
+	server 10.0.12.11:8000;
 }
 
 server {
